--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
             <div class="content">
                 <div class="zumrad">
 
-                    <p>люблю тебя</p>
-                    <p>22.12.2020</p>
+                    <p>короче я уже заебался от твоего вранья</p>
+                    <p>ты сама ебанашка. я меняю правила игры, теперь ты будешь просить прощения за свой пиздеж</p>
+                    
 
                 </div>
             </div>
