--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
             <div class="content">
                 <div class="zumrad">
 
-                    <p>короче я уже заебался от твоего вранья</p>
-                    <p>ты сама ебанашка. я меняю правила игры, теперь ты будешь просить прощения за свой пиздеж</p>
-                    
+                    <p>Эми, ты обманывала меня как твой отец, бросила как твой отец.<br> 
+                       Почему ты надеялась, что я буду идеальным в ответ, если ты сама все испортила своим враньем?</p>
+                    <p>Я тебе никогда не врал и не обманывал. Конечно же никогда не будет поздно нам все начать сначала.<br> 
+                        Но если ты не совсем глупая, то знаешь что время не переиграть.</p>
+                    <p>Поэтому, чем быстрее мы воссоединимся, тем будет лучше.</p>
 
                 </div>
             </div>
