--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     <p>Эми, ты обманывала меня как твой отец, бросила как твой отец.<br> 
                        Почему ты надеялась, что я буду идеальным в ответ, если ты сама все испортила своим враньем?</p>
                     <p>Я тебе никогда не врал и не обманывал. Конечно же никогда не будет поздно нам все начать сначала.<br> 
-                        Но если ты не совсем глупая, то знаешь что время не переиграть.</p>
+                        Но если ты не совсем глупая, то знаешь, что время не переиграть.</p>
+                    <p>Мы идеально подходим друг другу, просто в силу своего образа жизни, ты это поймешь сильно позже</p>
                     <p>Поэтому, чем быстрее мы воссоединимся, тем будет лучше.</p>
 
                 </div>
